resolve sidebar overflow

--- a/src/styles/modules/sidebar.scss
+++ b/src/styles/modules/sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
-    height: 100%;
+    height: 100vh;
 
     display: flex;
     flex-direction: column;
@@ -26,6 +26,8 @@
 .sidebar .content {
     flex: 18;
     padding: 1rem;
+
+    overflow: scroll;
 
     .channel {
         margin: 1.5rem 0;
